gitlab-omnibus-18.7/manifests/gitlab-omnibus-httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: gitlab-omnibus
  namespace: envoy-gateway-system
spec:
  parentRefs:
    - name: cmp-gateway
      namespace: envoy-gateway-system
  hostnames:
    - gitlab.devops.internal
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: gitlab-omnibus
          namespace: gitlab-omnibus
          port: 80
